Komponen dengan $emit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             </daftar>
         </ul>
     </div>
+    <div id="blog-posts-events-demo">
+        <div :style="{ fontSize: postFontSize + 'em' }">
+            <blog-post 
+            v-for="post in posts" 
+            v-bind:key="post.id" 
+            v-bind:post="post"
+            v-on:enlarge-text="postFontSize += 0.1">
+            </blog-post>
+        </div>
+    </div>
     <script src="vue.js"></script>
     <script src="app.js"></script>
 </body>
